# tc_prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  cache.py  coordinate_utils.py  docker-compose.yml  features.py  model_evaluation.py  model_training.py  mypy.ini  pyproject.toml  run_api.py  train.ipynb  train_data_processing.py
api/: README.md  __init__.py  config.py  main.py  models.py  service.py
bst_data/: bst_all_description.md  parse_bst.py
core/: __init__.py  constants.py  coordinates.py  features.py
data_processing/: __init__.py  base_processor.py  data_processor.py  dataset_models.py  dataset_utils.py  inference_processor.py
evaluation/: __init__.py  evaluator.py  visualization.py
inference/: README.md  __init__.py  onnx_pipeline.py
models/: __init__.py  dataset.py  losses.py  model.py
training/: __init__.py  data_module.py  sample_weights.py
weights/: model.onnx  model.onnx.data
