[project]
name = "tc"
version = "0.2.0"
description = "Encoder для предсказания траекторий циклонов"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "ipykernel>=6.29.5",
    "jupytext>=1.17.2",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "torch>=2.3.0",
    "pytorch-lightning>=2.2.5",
    "scikit-learn>=1.7.1",
    "plotly>=6.2.0",
    "tabulate>=0.9.0",
    "types-tabulate>=0.9.0.20241207",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1",
    "fsspec>=2025.7.0",
    "mypy>=1.17.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "black>=25.1.0",
    "pydantic-settings>=2.10.1",
    "onnxscript>=0.3.2",
]
